# procesally-app-backend

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  ruff.toml
app/: config.py  main.py
app/api/: api_router.py
app/api/middlewares/: cors.py  exceptions.py
app/api/routers/: auth.py  legal.py  users.py
app/core/: config.py  dof_parser.py  embeddings.py  legal_config.py  logger.py
app/core/exceptions/: global_handlers.py
app/modules/auth/domain/: services.py
app/modules/legal_library/adapters/: app_domain_mapper.py  domain_datasource_mapper.py  presentation_app_mapper.py
app/modules/legal_library/domain/: services.py
app/modules/legal_library/exceptions/: legal_exceptions.py
app/modules/legal_library/infrastructure/: models.py
app/modules/share/exceptions/: http_exceptions.py
app/modules/share/infrastructure/: http_client.py
app/modules/users/domain/: services.py
app/share/exceptions/: base_exceptions.py  http_exceptions.py
app/share/infrastructure/: http_client.py
docs/: architecture_diagram.xml  laws.json  requeriments.md
scripts/: build_legal_parser_dataset.py  dev_parsing_reset.sh  fix_ley_o_codigo.sql  update_document_materias.py  update_materias_multiples.py
tests/: conftest.py
tests/integration/: audit_senior_engine.py  test_bulk_url_dev_sample.py  test_legal_api_contracts.py  test_legal_search_full_suite.py  test_parsers_production.py  test_parsing_only_mode.py  test_users_api.py
(+40 files in other folders)
